--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,109 @@
-.App {
+.app {
   text-align: center;
+  min-height: 100vh;
+  margin: 0;
 }
 
-.App-logo {
+.app-light {
+  background-color: #fff;
+  color: #333;
+}
+
+.app-dark {
+  background-color: #222;
+  color: #fff;
+}
+
+.app-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .app-logo {
+    animation: app-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.app-header {
+  background-color: var(--background-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--text-color);
 }
 
-.App-link {
+#header {
+  padding: 5px 50px;
+  margin-top: 0;
+  position: static;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+#header span {
+  margin: 10px
+}
+
+.app-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+#search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#search-bar {
+  width: 75%;
+  margin: 0 auto;
+  padding: 5px 25px;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+#search-form {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 260px;
+  margin-right: 20px;
+}
+
+#search-input {
+  background: url(https://i.imgur.com/lrQiTER.png) no-repeat 1%;
+  background-size: 20px;
+  background-color: rgba(0, 0, 0, 0.075);
+  height: 20px;
+  width: 100%;
+  color: grey;
+  border: 0px;
+  padding: 10px 40px;
+  margin-right: 5px;
+  border-radius: 10px;
+}
+
+#search-btn {
+  flex-shrink: 0;
+  width: 60px;
+  padding: auto 10px;
+  border: 1px solid #ccc;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border-radius: 10px;
+}
+
+
+@media screen and (max-width: 600px) {
+  #search {
+    width: 100%;
+  }
+}
+
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
